--- a/config
+++ b/config
@@ -109,11 +109,11 @@ bindsym $mod+Shift+s sticky toggle
 # focus the child container
 #bindsym $mod+d focus child
 #for_window [class="NetBeans"] floating enable
-assign [class="Firefox"] $workspace1
-assign [class="Thunar"] $workspace2
+#assign [class="Firefox"] $workspace1
+#assign [class="Thunar"] $workspace2
 #set workspaces
-set $workspace1 "1 " 
-set $workspace2 "2 🖿" 
+set $workspace1 "1 " 
+set $workspace2 "2 " 
 set $workspace3 "3 " 
 set $workspace4 "4 " 
 set $workspace5 "5 " 
